Objetivos propuestos para el análisis

--- a/entrega_1/code/data_preprocessing_manuela.ipynb
+++ b/entrega_1/code/data_preprocessing_manuela.ipynb
@@ -1769,6 +1769,34 @@
    "source": [
     "No hay observaciones con valores únicos por atributo, que no se encuentren pre definidos en el data card de la fuente. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **6. Análisis de los datos**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. ¿Qué factores influyen en el consumo de sustancias? El dataset incluye información sobre factores demográficos, psicológicos y conductuales que podrían estar relacionados con el consumo de sustancias. Por ejemplo, se podría analizar si hay diferencias en el consumo de sustancias según la edad, el género, el nivel de educación o la etnicidad.\n",
+    "\n",
+    "2. ¿Qué tipos de sustancias son más consumidas por las personas con diferentes características? El dataset incluye información sobre el consumo de una amplia gama de sustancias, desde alcohol y tabaco hasta drogas ilegales. Se podría analizar si hay diferencias en el consumo de estas sustancias según las características de las personas.\n",
+    "\n",
+    "3. Cuales son las drogas mayormente consumidas? Hacer agrupaciones por las variables independientes. \n",
+    "\n",
+    "4. Cuáles son los fármacos con alta correlación? Esta correlacion estara dada por mivel de consumo, estas correlaciones permiten establecer patrones de consumo? \n",
+    "\n",
+    "5. Cuáles son las sustancias con baja correlación? \n",
+    "\n",
+    "6. Cuales son las caracteristicas comunes entre los grupos de consumidores y no consumidores? \n",
+    "\n",
+    "7. ¿Cómo se relacionan el consumo de sustancias y la personalidad? El dataset incluye información sobre la personalidad de las personas, evaluada mediante cuestionarios psicológicos. Se podría analizar si hay relaciones entre el consumo de sustancias y las diferentes dimensiones de la personalidad.\n",
+    "\n",
+    "8. ¿Cómo se relacionan el consumo de sustancias y el comportamiento? El dataset incluye información sobre el comportamiento de las personas, como su estado civil, su ocupación o su nivel de ingresos. Se podría analizar si hay relaciones entre el consumo de sustancias y el comportamiento de las personas.\n"
+   ]
   }
  ],
  "metadata": {
