Objetivos y acotacion del proyecto (propuesta) Falta: evaluar con el equipo

--- a/entrega_1/code/data_preprocessing_manuela.ipynb
+++ b/entrega_1/code/data_preprocessing_manuela.ipynb
@@ -4,20 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Trabajo en grupo: Primera entrega** <br>\n",
     "**Grupo:** 1 <br>\n",
-    "**Integrantes:**\n",
-    "* Jerson Alexander Peña Martínez\n",
-    "* Alejandro López-Fando Fernández\n",
-    "* Manuela Larrea Gómez\n",
-    "\n",
-    "\n",
-    "### **Trabajo en grupo: Primera entrega**\n",
     "<hr>\n",
     "\n",
     "### Requerimientos del sistema\n",
     "\n",
     "* Versión de Python: 3.11.4 o superior\n",
     "* Versión del módulo Pandas: 2.0.1 o superior\n",
+    "* Versión del módulo Plotnine: _________ o superior\n",
     "\n",
     "# **Consumo de drogas: Atributos de la personalidad relacionados** \n"
    ]
@@ -61,11 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import plotnine as p9"
    ]
   },
   {
@@ -1781,21 +1777,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. ¿Qué factores influyen en el consumo de sustancias? El dataset incluye información sobre factores demográficos, psicológicos y conductuales que podrían estar relacionados con el consumo de sustancias. Por ejemplo, se podría analizar si hay diferencias en el consumo de sustancias según la edad, el género, el nivel de educación o la etnicidad.\n",
     "\n",
-    "2. ¿Qué tipos de sustancias son más consumidas por las personas con diferentes características? El dataset incluye información sobre el consumo de una amplia gama de sustancias, desde alcohol y tabaco hasta drogas ilegales. Se podría analizar si hay diferencias en el consumo de estas sustancias según las características de las personas.\n",
+    "#### Objetivos: \n",
     "\n",
-    "3. Cuales son las drogas mayormente consumidas? Hacer agrupaciones por las variables independientes. \n",
     "\n",
-    "4. Cuáles son los fármacos con alta correlación? Esta correlacion estara dada por mivel de consumo, estas correlaciones permiten establecer patrones de consumo? \n",
+    "1. ¿Cuáles son las caracteristicas comunes entre los grupos de consumidores y no consumidores? ¿Qué factores influyen en el consumo de sustancias?  \n",
     "\n",
-    "5. Cuáles son las sustancias con baja correlación? \n",
+    "2. ¿Qué tipos de sustancias son más consumidas por las personas con diferentes características?\n",
     "\n",
-    "6. Cuales son las caracteristicas comunes entre los grupos de consumidores y no consumidores? \n",
+    "3. ¿Cuales son las drogas mayormente consumidas?\n",
     "\n",
-    "7. ¿Cómo se relacionan el consumo de sustancias y la personalidad? El dataset incluye información sobre la personalidad de las personas, evaluada mediante cuestionarios psicológicos. Se podría analizar si hay relaciones entre el consumo de sustancias y las diferentes dimensiones de la personalidad.\n",
+    "4. ¿Cuáles son los fármacos con alta correlación? ¿Estas correlaciones permiten establecer patrones de consumo? \n",
     "\n",
-    "8. ¿Cómo se relacionan el consumo de sustancias y el comportamiento? El dataset incluye información sobre el comportamiento de las personas, como su estado civil, su ocupación o su nivel de ingresos. Se podría analizar si hay relaciones entre el consumo de sustancias y el comportamiento de las personas.\n"
+    "5. ¿Cuáles son las sustancias con baja correlación? \n",
+    "\n",
+    "6. ¿Cómo se relacionan el consumo de sustancias y la personalidad? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.1. ¿Cuáles son las caracteristicas comunes entre los grupos de consumidores y no consumidores? ¿Qué factores influyen en el consumo de sustancias?\n",
+    "\n",
+    "El dataset incluye información sobre factores demográficos, psicológicos y conductuales que podrían estar relacionados con el consumo de sustancias. Por ejemplo, se podría analizar si hay diferencias en el consumo de sustancias según la edad, el género, el nivel de educación o la etnicidad."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.2. ¿Qué tipos de sustancias son más consumidas por las personas con diferentes características?\n",
+    "\n",
+    " El dataset incluye información sobre el consumo de una amplia gama de sustancias, desde alcohol y tabaco hasta drogas ilegales. Se podría analizar si hay diferencias en el consumo de estas sustancias según las características de las personas.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.3. Cuales son las drogas mayormente consumidas? \n",
+    " Hacer agrupaciones por las variables independientes. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.4. Cuáles son los fármacos con alta correlación? ¿Estas correlaciones permiten establecer patrones de consumo? \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.5. Cuáles son las sustancias con baja correlación?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.6. ¿Cómo se relacionan el consumo de sustancias y la personalidad? <br>\n",
+    "\n",
+    "El dataset incluye información sobre la personalidad de las personas, evaluada mediante cuestionarios psicológicos. Se podría analizar si hay relaciones entre el consumo de sustancias y las diferentes dimensiones de la personalidad."
    ]
   }
  ],
