Validacion de valores unicos respecto a bibliografía

--- a/entrega_1/code/data_preprocessing_manuela.ipynb
+++ b/entrega_1/code/data_preprocessing_manuela.ipynb
@@ -1763,7 +1763,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No hay observaciones con valores únicos por atributo, que no se encuentren pre definidos en el data card de la fuente. "
+    "No hay observaciones con valores únicos por atributo, que no se encuentren pre definidos en el data card de la fuente. \n",
+    "<img src='..\\doc\\img\\unique_variables.png'>\n"
    ]
   },
   {
