--- a/entrega_1/code/data_preprocessing_manuela.ipynb
+++ b/entrega_1/code/data_preprocessing_manuela.ipynb
@@ -67,7 +67,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "import utils.dictionary as dicts"
+    "import utilities.dictionary as dicts"
    ]
   },
   {
@@ -2489,18 +2489,18 @@
     "#Encode columns\n",
     "df_encoded = df.copy()\n",
     "\n",
-    "df_encoded = encode_columns(df_encoded, dicts.age_values, 0)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.gender_values, 1)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.education_values, 2)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.country_values, 3)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.ethnicity_values, 4)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.nscore_values, 5)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.escore_values, 6)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.oscore_values, 7)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.ascore_values, 8)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.cscore_values, 9)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.impulsivity, 10)\n",
-    "df_encoded = encode_columns(df_encoded, dicts.ss_values, 11)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.age_values_num, 0)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.gender_values_num, 1)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.education_values_num, 2)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.country_values_num, 3)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.ethnicity_values_num, 4)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.nscore_values_num, 5)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.escore_values_num, 6)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.oscore_values_num, 7)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.ascore_values_num, 8)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.cscore_values_num, 9)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.impulsivity_num, 10)\n",
+    "df_encoded = encode_columns(df_encoded, dicts.ss_values_num, 11)\n",
     "\n",
     "for i in range(12, len(df_encoded.columns)):\n",
     "    df_encoded = encode_columns(df_encoded, dicts.used_values, i)"
