add clean data file

--- a/entrega_1/code/clean_data.ipynb
+++ b/entrega_1/code/clean_data.ipynb
@@ -1670,351 +1670,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "e64ad1da",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>education</th>\n",
-       "      <th>country</th>\n",
-       "      <th>n_score</th>\n",
-       "      <th>e_score</th>\n",
-       "      <th>o_score</th>\n",
-       "      <th>a_score</th>\n",
-       "      <th>c_score</th>\n",
-       "      <th>impulsive</th>\n",
-       "      <th>sensation_seeing</th>\n",
-       "      <th>alcohol</th>\n",
-       "      <th>caffeine</th>\n",
-       "      <th>nicotine</th>\n",
-       "      <th>recreational_drugs</th>\n",
-       "      <th>stimulant_drugs</th>\n",
-       "      <th>sedative_drugs</th>\n",
-       "      <th>high_risk_drugs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Estudios de FP</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>39</td>\n",
-       "      <td>36</td>\n",
-       "      <td>42</td>\n",
-       "      <td>37</td>\n",
-       "      <td>42</td>\n",
-       "      <td>-0.21712</td>\n",
-       "      <td>-1.18084</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>25-34</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Estudios superiores</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>29</td>\n",
-       "      <td>52</td>\n",
-       "      <td>55</td>\n",
-       "      <td>48</td>\n",
-       "      <td>41</td>\n",
-       "      <td>-0.71126</td>\n",
-       "      <td>-0.21575</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Estudios de FP</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>31</td>\n",
-       "      <td>45</td>\n",
-       "      <td>40</td>\n",
-       "      <td>32</td>\n",
-       "      <td>34</td>\n",
-       "      <td>-1.37983</td>\n",
-       "      <td>0.40148</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>18-24</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Estudios superiores</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>34</td>\n",
-       "      <td>34</td>\n",
-       "      <td>46</td>\n",
-       "      <td>47</td>\n",
-       "      <td>46</td>\n",
-       "      <td>-1.37983</td>\n",
-       "      <td>-1.18084</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>35-44</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Estudios superiores</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>43</td>\n",
-       "      <td>28</td>\n",
-       "      <td>43</td>\n",
-       "      <td>41</td>\n",
-       "      <td>50</td>\n",
-       "      <td>-0.21712</td>\n",
-       "      <td>-0.21575</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1872</th>\n",
-       "      <td>18-24</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Estudiando</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>25</td>\n",
-       "      <td>51</td>\n",
-       "      <td>57</td>\n",
-       "      <td>48</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0.88113</td>\n",
-       "      <td>1.92173</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1873</th>\n",
-       "      <td>18-24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Estudiando</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>33</td>\n",
-       "      <td>51</td>\n",
-       "      <td>50</td>\n",
-       "      <td>48</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0.88113</td>\n",
-       "      <td>0.76540</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1874</th>\n",
-       "      <td>25-34</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Estudios superiores</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>47</td>\n",
-       "      <td>30</td>\n",
-       "      <td>37</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0.52975</td>\n",
-       "      <td>-0.52593</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1875</th>\n",
-       "      <td>18-24</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Estudiando</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>45</td>\n",
-       "      <td>26</td>\n",
-       "      <td>48</td>\n",
-       "      <td>32</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1.29221</td>\n",
-       "      <td>1.22470</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1876</th>\n",
-       "      <td>18-24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Estudiando</td>\n",
-       "      <td>Republic of Ireland</td>\n",
-       "      <td>31</td>\n",
-       "      <td>53</td>\n",
-       "      <td>56</td>\n",
-       "      <td>50</td>\n",
-       "      <td>45</td>\n",
-       "      <td>0.88113</td>\n",
-       "      <td>1.22470</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1877 rows × 18 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        age  gender            education              country  n_score  \\\n",
-       "0     35-44  Female       Estudios de FP                   UK       39   \n",
-       "1     25-34    Male  Estudios superiores                   UK       29   \n",
-       "2     35-44    Male       Estudios de FP                   UK       31   \n",
-       "3     18-24  Female  Estudios superiores                   UK       34   \n",
-       "4     35-44  Female  Estudios superiores                   UK       43   \n",
-       "...     ...     ...                  ...                  ...      ...   \n",
-       "1872  18-24  Female           Estudiando                  USA       25   \n",
-       "1873  18-24    Male           Estudiando                  USA       33   \n",
-       "1874  25-34  Female  Estudios superiores                  USA       47   \n",
-       "1875  18-24  Female           Estudiando                  USA       45   \n",
-       "1876  18-24    Male           Estudiando  Republic of Ireland       31   \n",
-       "\n",
-       "      e_score  o_score  a_score  c_score  impulsive  sensation_seeing  \\\n",
-       "0          36       42       37       42   -0.21712          -1.18084   \n",
-       "1          52       55       48       41   -0.71126          -0.21575   \n",
-       "2          45       40       32       34   -1.37983           0.40148   \n",
-       "3          34       46       47       46   -1.37983          -1.18084   \n",
-       "4          28       43       41       50   -0.21712          -0.21575   \n",
-       "...       ...      ...      ...      ...        ...               ...   \n",
-       "1872       51       57       48       33    0.88113           1.92173   \n",
-       "1873       51       50       48       30    0.88113           0.76540   \n",
-       "1874       30       37       31       31    0.52975          -0.52593   \n",
-       "1875       26       48       32       22    1.29221           1.22470   \n",
-       "1876       53       56       50       45    0.88113           1.22470   \n",
-       "\n",
-       "      alcohol  caffeine  nicotine  recreational_drugs  stimulant_drugs  \\\n",
-       "0           1         1         0                   0                0   \n",
-       "1           1         1         1                   1                1   \n",
-       "2           1         1         0                   1                0   \n",
-       "3           1         1         0                   0                0   \n",
-       "4           1         1         0                   1                0   \n",
-       "...       ...       ...       ...                 ...              ...   \n",
-       "1872        1         1         0                   1                0   \n",
-       "1873        1         1         1                   1                1   \n",
-       "1874        1         1         1                   1                1   \n",
-       "1875        1         1         1                   1                0   \n",
-       "1876        1         1         1                   1                1   \n",
-       "\n",
-       "      sedative_drugs  high_risk_drugs  \n",
-       "0                  0                0  \n",
-       "1                  0                0  \n",
-       "2                  0                0  \n",
-       "3                  1                0  \n",
-       "4                  0                0  \n",
-       "...              ...              ...  \n",
-       "1872               1                1  \n",
-       "1873               1                0  \n",
-       "1874               1                1  \n",
-       "1875               1                0  \n",
-       "1876               1                0  \n",
-       "\n",
-       "[1877 rows x 18 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "df"
+    "df.to_csv('../data/drug_consumption_clean.csv', index=False)"
    ]
   }
  ],
