--- a/entrega_1/code/clean_data.ipynb
+++ b/entrega_1/code/clean_data.ipynb
@@ -193,7 +193,7 @@
    "metadata": {},
    "source": [
     "Observamos que en ninguna columna tenemos valores nulos.  \n",
-    "¿El tipop de nuestras columnas es el adecuado?"
+    "¿El tipo de nuestras columnas es el adecuado?"
    ]
   },
   {
