Actualizar ruta de datos

--- a/entrega_1/code/exploration_and_visualizations.ipynb
+++ b/entrega_1/code/exploration_and_visualizations.ipynb
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "data_drug = pd.read_csv('drug_consumption_clean.csv')\n",
+    "data_drug = pd.read_csv('./data/drug_consumption_clean.csv')\n",
     "data_drug.head()"
    ]
   },
