--- a/entrega_1/code/visualizations.ipynb
+++ b/entrega_1/code/visualizations.ipynb
@@ -11,9 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import plotly.graph_objects as go\n",
     "import plotly.subplots as sp\n",
-    "import seaborn as sns\n",
-    "\n",
-    "\n"
+    "import seaborn as sns"
    ]
   },
   {
@@ -215,6 +213,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribución absoluta de géneros en la muestra"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -256,6 +261,13 @@
    "metadata": {},
    "source": [
     "El gráfico de barras proporciona una cuantificación y comparación efectiva de la prevalencia de hombres y mujeres en cada grupo etario de la muestra. Se observa una variabilidad significativa en el rango de 18-24 años para el subconjunto masculino, con 400 hombres en este rango y el resto distribuido en los demás rangos de edad. En contraste, la distribución de edades para el subconjunto femenino presenta una variabilidad menor, con el rango de 25-34 años siendo el más representado en la muestra. Para todos los rangos de edad, excepto 18-24 y 55+, hay un mayor número de mujeres que de hombres."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribución de frecuencias relativas de consumo por género. Gráfico radial para visualizar tendencias "
    ]
   },
   {
@@ -1287,6 +1299,13 @@
     "    }\n",
     ")\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribución de frecuencias relativas de consumo de drogas ilegales por género. Gráfico radial para visualizar tendencias de drogas con consumo pico"
    ]
   },
   {
@@ -2322,6 +2341,13 @@
     "drugs_agg_gender1.index = drugs_agg_gender1.index.str.replace(\"Female\", \"Femenino\")\n",
     "\n",
     "drugs_agg_gender1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribución de frecuencias relativas de consumo de drogas pico de acuerdo a la edad y el nivel educativo"
    ]
   },
   {
