Codigo de visualizaciones

--- a/entrega_1/code/visualizations.ipynb
+++ b/entrega_1/code/visualizations.ipynb
@@ -3251,6 +3251,198 @@
     "+ p9.geom_text(size=8, position=p9.position_stack(vjust=0.5))\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def personalidad_vs_drug_vs_usage(df, drug_number, personality_number):\n",
+    "    temp = df.columns\n",
+    "    drug = temp[drug_number]\n",
+    "    personality_col = temp[personality_number]\n",
+    "    \n",
+    "    personality = pd.concat([df[df[drug]==1][personality_col], df[df[drug]==0][personality_col]], axis=1)\n",
+    "    personality.columns = [f'{drug} User', 'Never Used']\n",
+    "    \n",
+    "    PersonPlot = plt.figure(figsize=(15, 6))\n",
+    "    sns.kdeplot(data=df, x=personality_col, hue=drug, fill=True, alpha=0.5, linewidth=1)\n",
+    "\n",
+    "    plt.ylabel('Density')\n",
+    "    plt.xlabel(str(personality_col))\n",
+    "    plt.title(f'Distribution of {personality_col} by {drug} usage')\n",
+    "    plt.legend(title=f'Drug Usage: {drug}', labels=[f'{drug} User', 'Never Used'], facecolor='white')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grafíco del consumo de drogas recreacionales.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"recreational_drugs\"),\n",
+    "                     df.columns.get_loc(\"o_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas estimulantes.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"stimulant_drugs\"),\n",
+    "                     df.columns.get_loc(\"o_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas sedativas.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"sedative_drugs\"),\n",
+    "                     df.columns.get_loc(\"o_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de nicotina.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"nicotine\"),\n",
+    "                     df.columns.get_loc(\"n_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas sedativas.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"sedative_drugs\"),\n",
+    "                     df.columns.get_loc(\"n_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas recreacionales.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"recreational_drugs\"),\n",
+    "                     df.columns.get_loc(\"n_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas estimulantes.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"stimulant_drugs\"),\n",
+    "                     df.columns.get_loc(\"n_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas recreacionales.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"recreational_drugs\"),\n",
+    "                     df.columns.get_loc(\"c_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas recreacionales.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"nicotine\"),\n",
+    "                     df.columns.get_loc(\"c_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas sedativas.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"sedative_drugs\"),\n",
+    "                     df.columns.get_loc(\"c_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas estimulantes.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"stimulant_drugs\"),\n",
+    "                     df.columns.get_loc(\"c_score\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de nicotina.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"nicotine\"),\n",
+    "                     df.columns.get_loc(\"sensation_seeing\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas recreacionales.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"recreational_drugs\"),\n",
+    "                     df.columns.get_loc(\"sensation_seeing\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consumo de drogas estímulantes.\n",
+    "personalidad_vs_drug_vs_usage(df, \n",
+    "                     df.columns.get_loc(\"stimulant_drugs\"),\n",
+    "                     df.columns.get_loc(\"sensation_seeing\"))"
+   ]
   }
  ],
  "metadata": {
@@ -3269,7 +3461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
